<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_boarding_header"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginBottom="24dp"/>

            <EditText
                android:id="@+id/displayName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/on_boarding_name"
                android:layout_marginBottom="8dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/next"/>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>