<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerInParent="true"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/profile.name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_name"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_uid"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/profile.uid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/profile_uid"
                    android:editable="false"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_disclaimer"
                android:layout_marginBottom="8dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>